# campusfix-dashboard

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  index.html  tailwind.config.ts
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: backend-deploy.yml  backend-docker.yml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
Frontend/: package-lock.json  package.json  vite.config.ts
Frontend/src/: App.tsx  main.tsx
Frontend/src/components/: AcceptReopenModals.tsx  DashboardCard.tsx
Frontend/src/layout/: AppLayout.tsx  Navbar.tsx
api-hosting/: .firebaserc  firebase.json
backend/: .env  .env.example  .gitignore  Dockerfile  app.py  config.py  db.py  docker-compose.yml  extensions.py  pyproject.toml  requirements.txt
backend/models/: complaint_model.py
backend/routes/: admin.py  auth.py  authorities.py  complaints.py  dashboard.py
backend/utils/: assignment.py  auth.py  email_queue.py  helpers.py
frontend/: .env  .env.example  .firebaserc  firebase.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/public/: blank.html  popup-auth.html
frontend/src/: App.tsx  index.css
mobile/: README.md  pubspec.yaml
mobile/lib/: main.dart
mobile/test/: widget_test.dart
src/: App.tsx  index.css
src/components/: ComplaintCard.tsx  DashboardCard.tsx  StatusBadge.tsx
src/layout/: Navbar.tsx
src/pages/: AdminDashboard.tsx  ClerkTasks.tsx  ComplaintDetails.tsx  LoginPage.tsx  ReportComplaint.tsx  StudentDashboard.tsx  TrackComplaints.tsx
src/services/: api.ts
(+64 files in other folders)
