[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.2.25",
    "dnspython>=2.7.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "google-auth>=2.49.2",
    "pymongo>=4.11.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
]
