[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2026.4.22",
    "dnspython>=2.7.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.1",
    "flask-limiter>=4.1.1",
    "google-auth>=2.52.0",
    "itsdangerous>=2.2.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.1.0",
    "requests>=2.34.1",
]
